Fix alignment of gutter dot

--- a/src/editor/styles/Editor.css
+++ b/src/editor/styles/Editor.css
@@ -263,7 +263,7 @@
   flex-direction: column;
   justify-content: space-between;
   transition: 0.2s all;
-  margin: -12px 0;
+  margin: -10px 0;
 }
 
 .ProseMirror .block-container:hover .block-gutter {
@@ -288,6 +288,10 @@
 .ProseMirror .add-block:hover {
   background-color: #65cfff;
   color: #fff;
+}
+
+.ProseMirror .edit-block {
+  margin-top: 5px;
 }
 
 .ProseMirror .edit-block:hover {
